--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">NewYorkTimes</string>
+    <string name="app_name">NYTimes</string>
+    <string name="characters">Characters</string>
+    <string name="favorites">Favorites</string>
+    <string name="search">Search</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="thumbnail">thumbnail</string>
+    <string name="share_text">Hi, I\'d like to share this article with you: %1$s</string>
+    <string name="share_title">Article from New York Times</string>
+    <string name="share">share</string>
+    <string name="error_image_content_description">error image</string>
+    <string name="no_articles_found">No articles found</string>
 </resources>
